--- a/Subscribe.html
+++ b/Subscribe.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <main id="main_sub">
-        <div class="esquerda">
+        <div class="esquerda" id="esquerda_sub">
             <figure><img src="./assets/pessoa_carta.png" alt="" height="350px"></figure>
         </div>
         
-        <div id="direita">
+        <div class="direita" id="direita_sub">
+
             <div class="colocar_X" class="hover_img" id="X_subs"><img src="./assets/X_fechar.png" alt="Fechar" width="48px"></div>
             <div id="conteudo_baixo">
                 <h1>Subscribe</h1>
